Improved stability and interface. New --namedpipe server option.

--- a/soeclient.conf
+++ b/soeclient.conf
@@ -62,7 +62,7 @@ keepalive = 60
 # Type: boolean (true/false, yes/no, on/off, 1/0)
 # Default: false
 # Visual enhancement: Colors help distinguish connection status and parameters
-color = true
+color = false
 
 # Disable Text User Interface completely
 # Type: boolean (true/false, yes/no, on/off, 1/0)
