--- a/soeserver.conf
+++ b/soeserver.conf
@@ -1,6 +1,6 @@
 # ==============================================================================
 # Serial-to-TCP Bridge Server (SoE Server) - Configuration File
-# Version: 0.0.52b
+# Version: 0.0.53
 # ==============================================================================
 # Usage: python serial_server.py --cfgfile soeserver.conf
 # ==============================================================================
@@ -24,6 +24,10 @@ address = 0.0.0.0
 # Examples: COM1 (Windows), /dev/ttyS0 (Linux).
 # Default: COM1 (Win) or /dev/ttyS0 (Lin)
 comport = COM1
+
+# Windows Named Pipe name (alternative to comport).
+# If set, overrides comport.
+# namedpipe = VM_Pipe
 
 # Baud rate.
 # Default: 9600
@@ -54,7 +58,7 @@ pwd = zaq12wsx
 # Enable SSL/TLS auto-negotiation (auto-generated certificate).
 # Requires password (pwd) to be set.
 # Default: False
-secauto = True
+secauto = False
 
 # Enable SSL/TLS with provided certificate and key files.
 # Format: path/to/cert.pem,path/to/key.pem
